[gd_scene load_steps=19 format=2]

[ext_resource path="res://addons/godot-loopring-sdk/utils/WalletConnector.gd" type="Script" id=1]
[ext_resource path="res://addons/godot-loopring-sdk/images/Metamask-logo.png" type="Texture" id=2]
[ext_resource path="res://addons/godot-loopring-sdk/images/lgme.png" type="Texture" id=3]
[ext_resource path="res://addons/godot-loopring-sdk/images/WalletConnect-logo.png" type="Texture" id=4]
[ext_resource path="res://UI/Screens/LoginScreen.gd" type="Script" id=5]
[ext_resource path="res://UI/FontLarge.tres" type="DynamicFont" id=6]
[ext_resource path="res://UI/FontMedium.tres" type="DynamicFont" id=7]
[ext_resource path="res://UI/MainUITheme.tres" type="Theme" id=8]
[ext_resource path="res://UI/white_arrow.png" type="Texture" id=9]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="Animation" id=6]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("LoginUI/WhiteArrow:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 208, 179 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "select_gamestop"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("LoginUI/WhiteArrow:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( 208, 179 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "select_metamask"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("LoginUI/WhiteArrow:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 208, 109 ) ]
}

[sub_resource type="Animation" id=9]
resource_name = "select_walletconnect"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("LoginUI/WhiteArrow:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 208, 248 ) ]
}

[node name="LoginScreen" type="Node2D"]
script = ExtResource( 5 )
button_metamask_path = NodePath("LoginUI/Buttons/ButtonMetamask")
button_walletconnect_path = NodePath("LoginUI/Buttons/ButtonWalletConnect")
button_gamestop_path = NodePath("LoginUI/Buttons/ButtonGamestop")
wallet_connector_path = NodePath("WalletConnector")

[node name="Bg" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 640.0
margin_bottom = 360.0
rect_min_size = Vector2( 640, 360 )
mouse_filter = 2
color = Color( 0.329412, 0.454902, 0.607843, 1 )

[node name="WalletConnector" type="Node" parent="."]
script = ExtResource( 1 )

[node name="LoginUI" type="CanvasLayer" parent="."]
visible = false

[node name="WhiteArrow" type="Sprite" parent="LoginUI"]
position = Vector2( 208, 179 )
texture = ExtResource( 9 )

[node name="Title2" type="Label" parent="LoginUI"]
margin_left = 128.0
margin_top = 24.0
margin_right = 512.0
margin_bottom = 72.0
custom_fonts/font = ExtResource( 6 )
text = "Connect your wallet"
align = 1

[node name="Buttons" type="VBoxContainer" parent="LoginUI"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -91.5
margin_top = -89.0
margin_right = 91.5
margin_bottom = 89.0
custom_constants/separation = 32

[node name="ButtonMetamask" type="TextureButton" parent="LoginUI/Buttons"]
margin_right = 183.6
margin_bottom = 38.4
rect_min_size = Vector2( 183.6, 38.4 )
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 2 )
texture_hover = ExtResource( 2 )
texture_focused = ExtResource( 2 )
expand = true

[node name="ButtonGamestop" type="TextureButton" parent="LoginUI/Buttons"]
margin_top = 70.0
margin_right = 183.6
margin_bottom = 108.4
rect_min_size = Vector2( 183.6, 38.4 )
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 3 )
texture_focused = ExtResource( 3 )
expand = true

[node name="ButtonWalletConnect" type="TextureButton" parent="LoginUI/Buttons"]
margin_top = 140.0
margin_right = 183.6
margin_bottom = 178.4
rect_min_size = Vector2( 183.6, 38.4 )
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 4 )
texture_focused = ExtResource( 4 )
expand = true

[node name="LoadingRect" type="ColorRect" parent="LoginUI"]
margin_right = 640.0
margin_bottom = 360.0
color = Color( 0.368627, 0.368627, 0.368627, 0.866667 )

[node name="LoadingCancelButton" type="Button" parent="LoginUI"]
margin_right = 640.0
margin_bottom = 360.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )

[node name="LoadingLabel" type="Label" parent="LoginUI"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -320.0
margin_top = -24.0
margin_right = 320.0
margin_bottom = 24.0
custom_fonts/font = ExtResource( 6 )
text = "Waiting for wallet..."
align = 1
valign = 1
autowrap = true

[node name="LoginPromptUI" type="CanvasLayer" parent="."]
layer = 2

[node name="Title" type="Label" parent="LoginPromptUI"]
margin_left = 128.0
margin_top = 24.0
margin_right = 512.0
margin_bottom = 72.0
custom_fonts/font = ExtResource( 6 )
text = "Login"
align = 1

[node name="Buttons" type="HBoxContainer" parent="LoginPromptUI"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -256.0
margin_top = -40.0
margin_right = 256.0
margin_bottom = 40.0
theme = ExtResource( 8 )

[node name="LoginProcessButton" type="Button" parent="LoginPromptUI/Buttons"]
unique_name_in_owner = true
margin_left = 35.0
margin_right = 219.0
margin_bottom = 80.0
rect_min_size = Vector2( 184, 80 )
size_flags_horizontal = 6
custom_fonts/font = ExtResource( 7 )
text = "Connect"

[node name="GuestButton" type="Button" parent="LoginPromptUI/Buttons"]
margin_left = 293.0
margin_right = 477.0
margin_bottom = 80.0
rect_min_size = Vector2( 184, 80 )
size_flags_horizontal = 6
custom_fonts/font = ExtResource( 7 )
text = "Play as Guest"

[node name="FrontLayer" type="CanvasLayer" parent="."]
layer = 10

[node name="ReturnLabel" type="Label" parent="FrontLayer"]
margin_left = 64.0
margin_top = 296.0
margin_right = 576.0
margin_bottom = 344.0
custom_fonts/font = ExtResource( 7 )
text = "Press Esc to go back"
align = 1
valign = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 6 )
anims/select_gamestop = SubResource( 7 )
anims/select_metamask = SubResource( 8 )
anims/select_walletconnect = SubResource( 9 )

[connection signal="pressed" from="LoginUI/LoadingCancelButton" to="." method="_on_LoadingCancelButton_pressed"]
[connection signal="pressed" from="LoginPromptUI/Buttons/LoginProcessButton" to="." method="_on_LoginProcessButton_pressed"]
[connection signal="pressed" from="LoginPromptUI/Buttons/GuestButton" to="." method="_on_GuestButton_pressed"]
